fixed registration form settings
