# lib/db/drizzle/schema.ts
@@ -53,6 +53,8 @@ export const forms = pgTable("forms", {
 	allowAdditionalPeople: boolean("allow_additional_people").default(false).notNull(),
 	showSectionsOneAtATime: boolean("show_sections_one_at_a_time").default(false).notNull(),
 	allowSecondGuardian: boolean("allow_second_guardian"),
+	hideOrgLogo: boolean("hide_org_logo").default(false).notNull(),
+	hideOrgName: boolean("hide_org_name").default(false).notNull(),
 }, (table) => [
 	unique("forms_embed_slug_unique").on(table.embedSlug),
 ]);
